# vol-surrogate

./: .README.md.un~  .env.example  .gitignore  README.md  dashboard.html  pyproject.toml
models/: compare.json  mlp_surrogate.pt  mlp_weights.json
scripts/: download_data.py
src/vol_surrogate/: __init__.py  app.py  cli.py
src/vol_surrogate/analysis/: __init__.py  dupire.py  hedging.py  params_ts.py
src/vol_surrogate/pricing/: __init__.py  black_scholes.py  heston.py  sabr.py
src/vol_surrogate/report/: plots.py
src/vol_surrogate/surrogate/: __init__.py  calibrate.py  compare.py  dataset.py  lhs.py  losses.py  mlp.py  train.py  transformer.py
tests/: conftest.py  test_analysis.py  test_calibration.py  test_dataset.py  test_hedging.py  test_pricing.py  test_surrogate.py
