[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vol-surrogate"
version = "0.1.0"
description = "Neural network surrogate for implied-volatility surface calibration: Heston/SABR ground truth, LHS dataset generation, PyTorch MLP with no-arbitrage penalties, millisecond calibration, hedging and Dupire local vol"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "torch>=2.2",
    "yfinance>=0.2",
    "requests>=2.31",
    "duckdb>=0.10",
    "pydantic>=2.0",
    "plotly>=5.18",
    "streamlit>=1.35",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
volsur = "vol_surrogate.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vol_surrogate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
